data/derived/comb/progs/unify/prog0367.ml.out
Characters 7-8:
  log (-.5);;
         ^
Error: This expression has type int but an expression was expected of type
         float
